/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a commented-out sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.1/userguide/tutorial_java_projects.html
 */

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
    }
}

plugins {
    id 'org.springframework.boot' version '1.5.8.RELEASE'
}

// Apply the java plugin to add support for Java
apply plugin: 'java'

sourceCompatibility = 1.8

// Apply application plugin for easy application start
apply plugin: 'application'

mainClassName = "uk.gov.justice.digital.delius.DeliusOffenderAPI"

// Apply the groovy plugin to also add support for Groovy (needed for Spock)
apply plugin: 'groovy'

// In this section you declare where to find the dependencies of your project
repositories {
    // Use 'jcenter' for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    mavenLocal()
}

configurations {
    compile.exclude module: "spring-boot-starter-tomcat"
}

// In this section you declare the dependencies for your production and test code
dependencies {
    compile files('lib/ojdbc8-12.2.0.1.jar')

    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.8.0'
    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.0'
    compile 'io.jsonwebtoken:jjwt:0.9.0'
    compile 'org.springframework.boot:spring-boot-starter-web:1.5.8.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-jetty:1.5.8.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.8.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-data-ldap:1.5.8.RELEASE'
    compile 'com.unboundid:unboundid-ldapsdk:4.0.1'
    compile 'io.springfox:springfox-swagger2:2.7.0'
    compile 'org.flywaydb:flyway-core:4.2.0'
    compile 'io.springfox:springfox-swagger-ui:2.7.0'
    compile 'com.zaxxer:HikariCP:2.7.2'

    compileOnly 'org.projectlombok:lombok:1.16.18'

    testRuntime 'com.h2database:h2:1.4.196'
    runtime 'com.h2database:h2:1.4.196'

    testCompile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
    testCompile 'org.springframework.boot:spring-boot-starter-test'
    testCompile 'junit:junit:4.12'
    testCompile 'io.rest-assured:rest-assured:3.0.3'

}
